Add custom toggle switch type

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch-error.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch-error.html.twig
@@ -4,7 +4,9 @@
     form.toggle_switch({
         'error': 'my error',
         'label': 'Toggle',
-        'id': 'toggletest'
+        'id': 'form_field',
+        'name': 'form[field]',
+        'value': '1'
     })
 }}
 {% endblock %}
