--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch.html.twig
@@ -3,7 +3,9 @@
 {{
     form.toggle_switch({
         'label': 'Toggle',
-        'id': 'toggletest'
+        'id': 'form_field',
+        'name': 'form[field]',
+        'value': '1'
     })
 }}
 {% endblock %}
