--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch-help.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch-help.html.twig
@@ -3,8 +3,10 @@
 {{
     form.toggle_switch({
         'label': 'Toggle',
-        'id': 'toggletest',
-        'help': 'my help text'
+        'id': 'form_field',
+        'help': 'my help text',
+        'name': 'form[field]',
+        'value': '1'
     })
 }}
 {% endblock %}
