Add password and tel form types to lexicon

--- a/views/symfony/tab_symfony.html.twig
+++ b/views/symfony/tab_symfony.html.twig
@@ -7,9 +7,11 @@
 
         <fieldset>
             <legend class="legend">Text fields</legend>
-            {{ form_row(symfonyForm.Textfield) }}
+            {{ form_row(symfonyForm.Text) }}
+            {{ form_row(symfonyForm.Password) }}
             {{ form_row(symfonyForm.Textarea) }}
             {{ form_row(symfonyForm.Email) }}
+            {{ form_row(symfonyForm.Tel) }}
             {{ form_row(symfonyForm.Integer) }}
             {{ form_row(symfonyForm.Money) }}
             {{ form_row(symfonyForm.Number) }}
