Add repeated type to lexicon

--- a/views/symfony/tab_symfony.html.twig
+++ b/views/symfony/tab_symfony.html.twig
@@ -22,6 +22,11 @@
         </fieldset>
 
         <fieldset>
+            <legend class="legend">Repeated fields</legend>
+            {{ form_row(symfonyForm.Repeated) }}
+        </fieldset>
+
+        <fieldset>
             <legend class="legend">Choice fields</legend>
             {{ form_row(symfonyForm.ChoiceDefault) }}
             {{ form_row(symfonyForm.ChoiceExpanded) }}
