--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-required-guidance.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-required-guidance.html.twig
@@ -9,19 +9,19 @@
             {
                 'label': 'Foo',
                 'id': 'form_field_0',
-                'name': '0',
+                'name': 'form[field]',
                 'value': '0'
             },
             {
                 'label': 'Bar',
                 'id': 'form_field_1',
-                'name': '1',
+                'name': 'form[field]',
                 'value': '1'
             },
             {
                 'label': 'Baz',
                 'id': 'form_field_2',
-                'name': '2',
+                'name': 'form[field]',
                 'value': '2'
             }
         ]
