--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice.html.twig
@@ -8,24 +8,23 @@
                 'label': 'None',
                 'id': 'form_field_placeholder',
                 'name': 'placeholder',
-                'value': '0'
             },
             {
                 'label': 'Foo',
                 'id': 'form_field_0',
-                'name': '0',
+                'name': 'form[field]',
                 'value': '0'
             },
             {
                 'label': 'Bar',
                 'id': 'form_field_1',
-                'name': '1',
+                'name': 'form[field]',
                 'value': '1'
             },
             {
                 'label': 'Baz',
                 'id': 'form_field_2',
-                'name': '2',
+                'name': 'form[field]',
                 'value': '2'
             }
         ]
