--- a/views/lexicon/forms/choice.html.twig
+++ b/views/lexicon/forms/choice.html.twig
@@ -10,6 +10,7 @@
         form.choice({
             'class': '',
             'label': 'Choice radios',
+            'required': true,
             'options': [
                 {
                     'label': 'One',
